Sat Nov 17 08:13:48 2012  Benoit Daloze  <eregontp@gmail.com>

	* lib/abbrev.rb: fix r37113. Correct examples, fix style
	  and show explicit dependency (require 'abbrev').

Sat Nov 17 07:35:15 2012  Luis Lavena  <luislavena@gmail.com>

	* win32/file.c (replace_to_long_name): skip automatic path expansion
	  when wildcard character is used.  [ruby-core:49451] [Bug #7374]

	* test/ruby/test_file_exhaustive.rb: add a test for above.

Sat Nov 17 00:50:23 2012  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* marshal.c (w_object): add flonum to arg->data to keep reference index
	  consistency. [ruby-core:49323] [Bug #7348]

	* test/ruby/test_marshal.rb: add a test for above.

Sat Nov 17 00:40:25 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (incs): dist files need probes.dmyh.

	* common.mk (probes.dmyh): depends on generator script.

	* Makefile.in, common.mk, configure.in, win32/Makefile.sub (probes.h):
	  select generating with dtrace or copying dummy file by suffix rules.

Fri Nov 16 19:24:10 2012  Koichi Sasada  <ko1@atdot.net>

	* thread.c (rb_thread_call_without_gvl2): change the parameter of
	  `func' from `int *skip_interrupt' to `VALUE *flags'.
	  If (flags & RUBY_CALL_WO_GVL_FLAG_SKIP_CHECK_INTS) is not zero,
	  then skip checking interrupt.
	  [ruby-core:46547]

	* include/ruby/thread.h: ditto.

Fri Nov 16 18:59:05 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* Makefile.in (no-dtrace-probes.h): dmyprobes.h is in srcdir.

	* common.mk (dmyprobes.h): ditto.

Fri Nov 16 17:57:15 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (probes.h): split build commands for dtrace-available
	  and unavailable platforms.

	* Makefile.in (incs): probes.h is a platform dependent file, so it
	  cannot be a part of prereq target.  move it to all-incs.

	* configure.in (DTRACE): move after AC_PROG_CC since cross_compiling
	  is set in it.

	* configure.in (DTRACE): ignore non-prefixed version if
	  cross-compiling.
