@@ -31,12 +31,5 @@ class Module
 end
 
 if defined?(::IRB)
-module Kernel
-  def psych_y *objects
-    puts Psych.dump_stream(*objects)
-  end
-  remove_method :y rescue nil
-  alias y psych_y
-  private :y
-end
+  require 'psych/y'
 end
